<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context="com.sebastian.appnotas.Configuracion">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblmendigi"
            android:id="@+id/lblmendigi"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:textColor="#01A9DB"
            android:layout_marginRight="294dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblcammen1"
            android:textColor="#01A9DB"
            android:id="@+id/lblcammen1" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="3"
            android:background="#FFFFFF"
            android:id="@+id/txtCamNota1"
            android:text="@string/txtCamNota1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblcammen2"
            android:textColor="#01A9DB"
            android:id="@+id/lblcammen2" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="3"
            android:background="#FFFFFF"
            android:id="@+id/txtcamNota2"
            android:text="@string/txtcamNota2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblcammen3"
            android:textColor="#01A9DB"
            android:id="@+id/lblcammen3" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="3"
            android:background="#FFFFFF"
            android:id="@+id/txtcamNota3"
            android:text="@string/txtcamNota3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblcammen4"
            android:textColor="#01A9DB"
            android:id="@+id/lblmen4" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="3"
            android:background="#FFFFFF"
            android:id="@+id/txtcamNota4"
            android:text="@string/txtcamNota4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar"
            android:textColor="#FFFFFF"
            android:id="@+id/btnGuardar" />

    </LinearLayout>

</RelativeLayout>
